[package]
name = "tycho"
version = "0.1.0"
authors = ["Sam Huddart <sam.fucked.up@samh.dev>"]
edition = "2018"
description = "A self describing binary format designed around the serde data model."
license="MIT"
documentation="https://docs.rs/tycho"
repository = "https://github.com/samhdev/tycho"
homepage = "https://github.com/samhdev/tycho"

[features]
partial = []

[dependencies]
byteorder = "1.4.2"
serde = "1.0.120"
uuid = "0.8.2"

[dev-dependencies.serde]
version = "1.0.120"
features = ["derive"]

[dev-dependencies.paste]
version = "1.0.5"