[package]
name = "tycho"
version = "0.1.1"
authors = ["Sam Huddart <sam.fucked.up@samh.dev>"]
edition = "2018"
description = "A minimal, self-describing and traversable binary data format designed around rust and the serde data model."
license="MIT"
documentation="https://docs.rs/tycho"
repository = "https://github.com/samhdev/tycho"
homepage = "https://github.com/samhdev/tycho"
keywords = ["format", "serde", "tokio", "tycho"]

[features]
partial = []
partial_state = []
async_tokio = ["tokio", "tokio-byteorder", "futures", "async-trait"]
serde_support = ["serde", "paste"]
serde_optimise = []
serde_types = []
default = ["serde_optimise", "serde_types"]
compression = ["flate2"]

[dependencies]
byteorder = "^1.4.2"
uuid = "^0.8.2"
hex = "0.4.3"
rand = "^0.8.3"


[dependencies.tokio]
version="^1.3.0"
features = ["io-util"]
optional = true

[dependencies.tokio-byteorder]
version="^0.3.0"
optional = true

[dependencies.futures]
version="^0.3.13"
optional = true

[dependencies.serde]
version = "^1.0.120"
optional = true

[dependencies.paste]
version = "^1.0.5"
optional = true

[dependencies.async-trait]
version = "^0.1.48"
optional = true

[dependencies.flate2]
version = "^1.0.20"
optional = true


[dev-dependencies]
paste = "^1.0.5"
tokio-test = "^0.4.1"

[dev-dependencies.serde]
version = "^1.0.120"
features = ["derive"]


[dev-dependencies.tokio]
version = "^1.3.0"
features = ["fs"]

[package.metadata.docs.rs]
all-features = true